# bnsyn-phase-controlled-emergent-dynamics

./: .coverage  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  AGENTS.md  BENCHMARK_PROTOCOL.md  BLOCKERS.md  CALIBRATION_SUMMARY.md  CHANGELOG.md  CITATION.cff  CODEBASE_READINESS.md  CODE_OF_CONDUCT.md  COMMANDS.txt  CONTRIBUTING.md  DOC_CHANGELOG.md  Dockerfile  FINAL_REPORT.md  GAP_TABLE.md  GOVERNANCE_VERIFICATION_REPORT.md  HARDENING_SUMMARY.md  INVENTORY.json  LAUNCH_READINESS_REPORT.md  LICENSE  MAINTAINERS.md  Makefile  PRODUCTION_READINESS_DOSSIER.md  PROMPT_DE_SPG.txt  PR_DESCRIPTION.md  PR_DESCRIPTION_EVIDENCE.md  PR_DIFF.patch  PR_FINAL_DESCRIPTION.md  PR_SUMMARY.md  README.md  README_CLAIMS_GATE.md  REPO_WORK_ASSESSMENT_VALUATION.md  ROADMAP.md  SECURITY.md  SUPPORT.md  VERIFICATION_REPORT.md  acceptance_map.yaml  (+18 more)
.github/: BRANCH_PROTECTION_GOVERNANCE.md  CODEOWNERS  PR_GATES.yml  QUALITY_LEDGER.md  REPO_MANIFEST.md  REQUIRED_CHECKS.yml  REQUIRED_STATUS_CONTEXTS.yml  WORKFLOW_CONTRACTS.md  dependabot.yml  ghtpo.yaml  pull_request_template.md
PROOF_BUNDLE/: audit_hash.txt  commands_executed.txt  toolchain_fingerprint.txt
artifacts/: coverage.json  coverage_term_missing.txt
assessment_logs/: ARCHITECTURE.nl  ARCH_INV.nl  CI_GATES.nl  README.nl  SECURITY.nl  TESTING.nl  pyproject.nl  pytest.nl
audit/: TRACEABILITY.md  classification_rules.yml
audit_evidence/: 00_index.txt  01_metadata.txt  02_contributors.txt  03_file_inventory.txt  04_loc.txt  05_tests.txt  06_cicd.txt  07_complexity.txt  08_churn.txt  09_velocity.txt  10_doc_sizes.txt  11_function_points.txt  phase1_step1.txt  phase1_step10.txt  phase1_step2.txt  phase1_step3.txt  phase1_step4_cloc.txt  phase1_step4_fallback.txt  phase1_step5.txt  phase1_step6.txt  phase1_step7.txt  phase1_step8.txt  phase1_step9.txt  phase3_heuristics.txt  phase3_radon.txt  phase3_tests.txt
audit_inputs/: claims.json  sources.yml
benchmarks/: README.md  __init__.py  baseline.json  bench_adex.py  bench_plasticity.py  bench_synapses.py  benchmark_dt.py  benchmark_plasticity.py  benchmark_scale.py  criticality.py  determinism.py  metrics.py  perf_smoke.py  performance_utils.py  physics_baseline.json  report.py  reporting.py  run_benchmarks.py  runner.py  scalability.py  scaling.py  scaling_plan.md  scenarios.py
bibliography/: bnsyn.bib  mapping.yml
calibration_pack/: audit_hash.txt  toolchain_fingerprint.txt
claims/: README.md  claims.yml
contracts/: cli_contract.v1.json
docs/: ACTIONS_TEST_PROTOCOL.md  API_CONTRACT.md  API_DOCS.md  API_STABILITY.md  ARCHITECTURE.md  AUDIT_DOCS_BASELINE.md  AUDIT_FINDINGS.md  AUDIT_LEDGER.md  BENCHMARKS.md  BENCHMARK_MAP.md  BIBLIOGRAPHY.md  BUILD_DOCS.md  CHANGE_MANAGEMENT.md  CI_BATTLE_USAGE_AUDIT_2026-02-07.md  CI_GATES.md  CI_GATES_old.md  CLI_REFERENCE.md  COLD_EMERGENCE.md  COMPONENT_AUDIT.md  CONFERENCE_RUNBOOK.md  CONFIGURATION.md  CONSTITUTIONAL_AUDIT.md  CONTROL_CONTRACT.md  COVERAGE_VALIDATION.md  CRITICALITY_CONTROL_VS_MEASUREMENT.md  CURRENT_STATE_FRACTAL_AUDIT.md  DECISIONS.md  DEMO.md  DOCUMENTATION_FORMALIZATION.md  DOCUMENTATION_GAP_LEDGER.md  DOC_DEBT.md  ENFORCEMENT_MATRIX.md  EVIDENCE_COVERAGE.md  GOVERNANCE.md  HYPOTHESIS.md  INDEX.md  INTEGRATION.md  INVENTORY.md  LAUNCH_BLOCKERS_UA.md  LEGENDARY_QUICKSTART.md  (+49 more)
entropy/: baseline.json  current.json  policy.json
examples/: scaled_flagship.sh
experiments/: registry.py  runner.py  temperature_ablation_consolidation.py  verify_hypothesis.py
manifest/: repo_manifest.computed.json  repo_manifest.json  repo_manifest.yml
proof_bundle/: BATTLE_READINESS_REPORT.md  commands_index.json  doc_inventory.json  file_excerpts.md  hashes.sha256  index.json  post_install_freeze.txt  repo_state.txt  toolchain_fingerprint.json
quality/: api_contract_baseline.json  coverage_gate.json  mutation_baseline.json  perf_baseline.json  perf_budgets.yml  public_api_snapshot.json
reports/: PR_DESCRIPTION.md  repo_representator.json  usability_blockers.json  usability_blockers_report.md
schemas/: audit_report_data.schema.json  document_contract.schema.json  experiment.schema.json  experiment_results.schema.json  manifest.schema.json  sleep_stack_metrics.schema.json  work_volume_time_report.schema.json
scripts/: README.md  __init__.py  _audit_metrics_pr40.py  audit_spec_implementation.py  bench_ci_smoke.py  benchmark_physics.py  benchmark_production.py  benchmark_sleep_stack_scale.py  build_wheelhouse.py  calculate_throughput_gain.py  check_api_contract.py  check_benchmark_regressions.py  check_coverage_gate.py  check_doc_links.py  check_docstrings.py  check_mutation_score.py  check_perf_budget.py  check_public_api_compat.py  check_quickstart_consistency.py  ci_cd_analyzer.py  ci_gate_runner.py  ci_policy.py  classify_changes.py  compare_benchmarks.py  compare_physics_baseline.py  compute_ci_cd_metrics.py  compute_repo_metrics.py  crosscheck_ci_cd_metrics.py  crosscheck_metrics.py  crosscheck_repo_metrics.py  doc_contracts.py  extract_odt_claims.py  generate_benchmark_baseline.py  generate_coverage_baseline.py  generate_coverage_trend.py  generate_evidence_coverage.py  generate_mutation_baseline.py  generate_work_volume_time_report.py  intelligence_cycle.py  launch_gate.py  (+63 more)
tests/: conftest.py  test_adex_smoke.py  test_api_contract_semver.py  test_api_maturity.py  test_api_properties.py  test_api_surface.py  test_attractor_crystallizer.py  test_audit_rules.py  test_audit_suite_artifacts.py  test_benchmark_regression_gate.py  test_calibration_smoke.py  test_ci_cd_metrics_gate.py  test_ci_policy_contract.py  test_claims_enforcement.py  test_classify_changes.py  (+118 more)
(+702 files in other folders)
