[project]
name = "bnsyn"
version = "0.2.0"
description = "BN-Syn Thermostated Bio-AI System: AdEx + conductances + 3-factor plasticity + criticality control + temperature-gated consolidation"
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}
authors = [{name="BN-Syn Contributors"}]
dependencies = [
  "numpy>=1.26",
  "pydantic>=2.7",
  "scipy>=1.10",
  "jsonschema>=4.17.0",
  "joblib>=1.3.0",
]

[project.optional-dependencies]
dev = [
  "hypothesis>=6.100.0",
  "pytest>=7.4.0",
  "pytest-cov>=4.1.0",
  "pyyaml>=6.0",
  "ruff>=0.14.0",
  "mypy>=1.7.0",
  "pylint>=3.0.0",
  "pydocstyle>=6.3.0",
  "bandit>=1.7.5",
  "validate-pyproject>=0.13.0",
  "pre-commit>=3.5.0",
  "pip-audit>=2.6.0",
  "psutil>=5.9",
  "sphinx>=7.2.0",
  "sphinx-autodoc-typehints>=2.0.0",
  "myst-parser>=2.0.0",
  "furo>=2024.1.29",
  "sphinx-copybutton>=0.5.2",
]

viz = [
  "matplotlib>=3.7.0",
  "pillow>=10.0.0",
  "streamlit>=1.28.0",
  "plotly>=5.17.0",
]

jax = [
  "jax>=0.4.20",
  "jaxlib>=0.4.20",
]

torch = [
  "torch>=2.1",
]

accelerators = [
  "bnsyn[jax]",
  "bnsyn[torch]",
]

[project.scripts]
bnsyn = "bnsyn.cli:main"

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.pytest.ini_options]
addopts = "-q --strict-markers"
testpaths = ["tests"]
markers = [
  "smoke: fast critical-path tests",
  "validation: slow statistical/large-N validation tests (excluded from CI by default)",
  "performance: performance regression tests with timing assertions",
  "integration: integration tests requiring multiple components",
  "property: property-based tests using Hypothesis",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
disallow_untyped_defs = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]

[tool.pylint.main]
recursive = true
ignore-patterns = ["^test_.*\\.py$", "^conftest\\.py$"]
fail-under = 7.5

[tool.pylint.messages_control]
disable = [
  "import-error",
  "invalid-name",
  "broad-exception-caught",
  "useless-import-alias",
  "missing-function-docstring",
]

[tool.pylint.basic]
good-names = ["i", "j", "k", "V", "N", "w", "dt", "dx", "dy", "R", "E"]

[tool.pylint.design]
max-args = 15

[[tool.mypy.overrides]]
module = "scipy.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "torch"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "jax.*"
ignore_missing_imports = true

[tool.setuptools.packages.find]
where = ["src"]
